add ControlNet extension

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -767,6 +767,31 @@
     },
     {
       "cell_type": "markdown",
+      "id": "b003ac5a-1557-4170-ad40-7a64b1c6db9c",
+      "metadata": {},
+      "source": [
+        "## <i class=\"fa fa-running\"></i> \u5b89\u88c5ControlNet\u63d2\u4ef6"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f345c842-46a7-4143-a857-8ce7d183e1da",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "from func.extensionsInstaller import install\n",
+        "\n",
+        "extURL='https://github.com/Mikubill/sd-webui-controlnet'\n",
+        "extFileSize=0\n",
+        "\n",
+        "install(extURL,extFileSize)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "38b87ebd-8eaa-4a22-98a9-767c5b668224",
       "metadata": {},
       "source": [
@@ -824,36 +849,39 @@
         "    else:\n",
         "        return None\n",
         "\n",
-        "def check_model_and_make_symbollink():\n",
+        "def check_model_and_make_symbollink(model_name):\n",
+        "    webUIDir = getWebUIDir()\n",
+        "    sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
+        "    model_path = os.path.realpath(os.path.join(sd_models_dir,model_name))\n",
         "    \n",
-        "    stable_diffusion_v2_dir = find_file('/', model_name)[0]\n",
+        "    file_list = find_file('/', model_name)\n",
+        "    if file_list:\n",
+        "        stable_diffusion_v2_dir = file_list[0]\n",
         "\n",
-        "    if stable_diffusion_v2_dir:\n",
+        "        print(stable_diffusion_v2_dir)\n",
         "\n",
-        "        if stable_diffusion_v2_dir==model_path:\n",
-        "            print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
-        "        else:\n",
-        "            # !cp $stable_diffusion_v2_dir $sd_models_dir\n",
-        "            # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
-        "            create_symlink(\n",
-        "                source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "                symlink_path = sd_models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "                symlink_name = 'v2-1_768-nonema-pruned.ckpt' # \u6a21\u578b\u540d\u79f0\n",
-        "            )\n",
-        "    # else:\n",
-        "    #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
-        "    #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
-        "    #     %run $convertodiffv2_path\n",
-        "    #     check_model_and_make_symbollink()\n",
+        "        if stable_diffusion_v2_dir:\n",
         "\n",
+        "            if stable_diffusion_v2_dir==model_path:\n",
+        "                print(f'{model_name}\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "            else:\n",
+        "                # !cp $stable_diffusion_v2_dir $sd_models_dir\n",
+        "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
+        "                create_symlink(\n",
+        "                    source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path = sd_models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name = model_name # \u6a21\u578b\u540d\u79f0\n",
+        "                )\n",
+        "        # else:\n",
+        "        #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
+        "        #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
+        "        #     %run $convertodiffv2_path\n",
+        "        #     check_model_and_make_symbollink()\n",
+        "    else:\n",
+        "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
         "\n",
-        "webUIDir = getWebUIDir()\n",
-        "print(webUIDir)\n",
-        "model_name = 'v2-1_768-nonema-pruned.ckpt'\n",
-        "sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
-        "model_path = os.path.realpath(os.path.join(sd_models_dir,model_name))\n",
-        "    \n",
-        "check_model_and_make_symbollink()"
+        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt')\n",
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors')"
       ]
     },
     {
@@ -1070,7 +1098,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     },
     "toc-autonumbering": false,
     "toc-showmarkdowntxt": false,
