add ControlNet models

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -795,7 +795,7 @@
       "id": "38b87ebd-8eaa-4a22-98a9-767c5b668224",
       "metadata": {},
       "source": [
-        "## \u6302\u8f7d.ckpt\u5230SD WebUI\u6a21\u578b\u6587\u4ef6\u5939"
+        "## \u6302\u8f7d.ckpt\u6216.safetensors\u5230SD WebUI\u6a21\u578b\u6587\u4ef6\u5939"
       ]
     },
     {
@@ -863,7 +863,7 @@
         "        if stable_diffusion_v2_dir:\n",
         "\n",
         "            if stable_diffusion_v2_dir==model_path:\n",
-        "                print(f'{model_name}\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "                print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
         "            else:\n",
         "                # !cp $stable_diffusion_v2_dir $sd_models_dir\n",
         "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
@@ -886,6 +886,74 @@
     },
     {
       "cell_type": "markdown",
+      "id": "19817a09-579d-40e7-80ba-e9421cd1195a",
+      "metadata": {},
+      "source": [
+        "## \u90e8\u7f72ControlNet\u6a21\u578b\n",
+        "\u89e3\u538bControlNet\u6a21\u578b\u5e76\u5728controlnet\u62d3\u5c55\u7684\u6a21\u578b\u76ee\u5f55\u4e0b\u521b\u5efa\u5bf9\u5e94\u6a21\u578b\u7684\u7b26\u53f7\u94fe\u63a5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f0df5b36-73ff-46f2-8cfd-36e1b3259d54",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def check_ContorlNet_model_and_make_symbollink(model_name):\n",
+        "    global webUIDir,models_dir\n",
+        "    try:\n",
+        "        webUIDir,models_dir\n",
+        "    except:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "        models_dir = os.path.realpath(os.path.join(webUIDir,'./extensions/sd-webui-controlnet/models'))\n",
+        "        \n",
+        "    model_path = os.path.realpath(os.path.join(models_dir,model_name))\n",
+        "    \n",
+        "    for i in range(0,4):\n",
+        "        file_list = find_file(f'/input{i}', model_name)\n",
+        "        if file_list:\n",
+        "            break\n",
+        "        else:\n",
+        "            continue\n",
+        "\n",
+        "    if file_list:\n",
+        "        stable_diffusion_v2_dir = file_list[0]\n",
+        "\n",
+        "        print(stable_diffusion_v2_dir)\n",
+        "\n",
+        "        if stable_diffusion_v2_dir:\n",
+        "\n",
+        "            if stable_diffusion_v2_dir==model_path:\n",
+        "                print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "            else:\n",
+        "                # !cp $stable_diffusion_v2_dir $models_dir\n",
+        "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
+        "                create_symlink(\n",
+        "                    source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path = models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name = model_name # \u6a21\u578b\u540d\u79f0\n",
+        "                )\n",
+        "        # else:\n",
+        "        #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
+        "        #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
+        "        #     %run $convertodiffv2_path\n",
+        "        #     check_model_and_make_symbollink()\n",
+        "    else:\n",
+        "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
+        "        \n",
+        "check_ContorlNet_model_and_make_symbollink('control_canny-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_depth-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_hed-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_mlsd-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_normal-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_openpose-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_scribble-fp16.safetensors')\n",
+        "check_ContorlNet_model_and_make_symbollink('control_seg-fp16.safetensors')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a960aaae-2871-4a6e-851d-d1f113d998ad",
       "metadata": {},
       "source": [
@@ -899,6 +967,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
+        "    \n",
+        "sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
         "print(sd_models_dir)\n",
         "!cd $sd_models_dir &&\\\n",
         "wget -O v2-1_768-nonema-pruned.yaml https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml"
@@ -1033,7 +1108,11 @@
         "\n",
         "canUseXformers = True\n",
         "\n",
-        "webUIDir = getWebUIDir()\n",
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
         "\n",
         "args = base_args[:]\n",
         "\n",
