try to fix segmentation problem

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -787,7 +787,66 @@
         "extURL='https://github.com/Mikubill/sd-webui-controlnet'\n",
         "extFileSize=0\n",
         "\n",
-        "install(extURL,extFileSize)"
+        "install(extURL,extFileSize)\n",
+        "\n",
+        "# \u5728\u4f7f\u7528segmentation\u8fd9\u4e2apreprocessor\u7684\u65f6\u5019\u9700\u8981\uff0c\u4f1a\u9047\u5230\u62a5\u9519\uff0c\u901a\u8fc7\u4ee5\u4e0b\u65b9\u6cd5\u8fdb\u884c\u4fee\u590d\uff1a\n",
+        "# https://github.com/lllyasviel/ControlNet/issues/61#issuecomment-1434005703\n",
+        "# https://github.com/Mikubill/sd-webui-controlnet/issues/70\n",
+        "\n",
+        "# \u8fd9\u79cd\u65b9\u6cd5\u8bd5\u8fc7\uff0c\u4f46\u4e0d\u751f\u6548\n",
+        "\n",
+        "# uninstall_mmcv_args = base_args[:]\n",
+        "# uninstall_mmcv_args += [\n",
+        "#     'pip uninstall mmcv -y'\n",
+        "# ]\n",
+        "# uninstall_mmcv_cmd = (\" \").join(uninstall_mmcv_args)\n",
+        "# !$uninstall_mmcv_cmd\n",
+        "\n",
+        "#\u4ee5\u4e0b\u8fd9\u79cd\u65b9\u6cd5\u4f1a\u66f4\u6539\u4e86pythonpath\u7684\u73af\u5883\uff0c\u5f71\u54cd\u5176\u4ed6\u5e93\u7684\u8c03\u7528\n",
+        "\n",
+        "# import os\n",
+        "# from func.env import getExtDir\n",
+        "\n",
+        "# extDir = getExtDir()\n",
+        "\n",
+        "# def find_and_set_uniformer_path(dir_name):\n",
+        "#     uniformer_path = None\n",
+        "#     # \u904d\u5386\u6307\u5b9a\u76ee\u5f55\u53ca\u5176\u5b50\u76ee\u5f55\u4e0b\u7684\u6240\u6709\u6587\u4ef6\u548c\u76ee\u5f55\n",
+        "#     for root, dirs, files in os.walk(dir_name):\n",
+        "#         # \u5982\u679cuniformer\u662f\u4e00\u4e2a\u76ee\u5f55\uff0c\u68c0\u67e5\u662f\u5426\u5728dirs\u4e2d\n",
+        "#         if 'uniformer' in dirs:\n",
+        "#             # \u83b7\u53d6uniformer\u6240\u5728\u7684\u5b8c\u6574\u8def\u5f84\uff0c\u5e76\u6253\u5370\u51fa\u6765\n",
+        "#             uniformer_path = os.path.join(root, 'uniformer')\n",
+        "#             print(uniformer_path)\n",
+        "#             # \u9000\u51fa\u5faa\u73af\uff0c\u4e0d\u518d\u7ee7\u7eed\u904d\u5386\u5176\u4ed6\u76ee\u5f55\u548c\u6587\u4ef6\n",
+        "#             break\n",
+        "\n",
+        "#         # \u5982\u679cuniformer\u662f\u4e00\u4e2a\u6587\u4ef6\uff0c\u68c0\u67e5\u662f\u5426\u5728files\u4e2d\n",
+        "#         if 'uniformer' in files:\n",
+        "#             # \u83b7\u53d6uniformer\u6240\u5728\u7684\u5b8c\u6574\u8def\u5f84\uff0c\u5e76\u6253\u5370\u51fa\u6765\n",
+        "#             uniformer_path = os.path.join(root, 'uniformer')\n",
+        "#             print(uniformer_path)\n",
+        "#             # \u9000\u51fa\u5faa\u73af\uff0c\u4e0d\u518d\u7ee7\u7eed\u904d\u5386\u5176\u4ed6\u76ee\u5f55\u548c\u6587\u4ef6\n",
+        "#             break\n",
+        "\n",
+        "#     if uniformer_path is not None:\n",
+        "#         # \u8bbe\u7f6ePYTHONPATH\u73af\u5883\u53d8\u91cf\uff0c\u5c06uniformer\u6240\u5728\u7684\u8def\u5f84\u6dfb\u52a0\u5230\u5f53\u524dPYTHONPATH\u7684\u503c\u4e2d\n",
+        "#         os.environ['PYTHONPATH'] = os.environ.get('PYTHONPATH', '') + os.pathsep + uniformer_path\n",
+        "#         # \u9a8c\u8bc1\u73af\u5883\u53d8\u91cf\u5df2\u7ecf\u8bbe\u7f6e\u6210\u529f\n",
+        "#         verify_uniformer_path_set(uniformer_path)\n",
+        "#     else:\n",
+        "#         print(\"\u5728\u76ee\u5f55{}\u4e2d\u672a\u627e\u5230uniformer\".format(dir_name))\n",
+        "\n",
+        "# def verify_uniformer_path_set(uniformer_path):\n",
+        "#     # \u83b7\u53d6\u5f53\u524dPYTHONPATH\u73af\u5883\u53d8\u91cf\u7684\u503c\uff0c\u5e76\u68c0\u67e5uniformer\u6240\u5728\u7684\u8def\u5f84\u662f\u5426\u5728\u5176\u4e2d\n",
+        "#     python_path = os.environ.get('PYTHONPATH', '')\n",
+        "#     if uniformer_path in python_path.split(os.pathsep):\n",
+        "#         print(\"PYTHONPATH\u73af\u5883\u53d8\u91cf\u8bbe\u7f6e\u6210\u529f\")\n",
+        "#     else:\n",
+        "#         print(\"PYTHONPATH\u73af\u5883\u53d8\u91cf\u8bbe\u7f6e\u5931\u8d25\")\n",
+        "\n",
+        "# # \u8c03\u7528\u51fd\u6570\uff0c\u5e76\u4f20\u5165\u8981\u641c\u7d22\u7684\u76ee\u5f55\u540d\n",
+        "# find_and_set_uniformer_path(extDir)"
       ]
     },
     {
