--- a/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
@@ -806,7 +806,7 @@
         "                #     symlink_name = model_name # \u6a21\u578b\u540d\u79f0\n",
         "                # )\n",
         "                \n",
-        "                !cp $stable_diffusion_v2_dir $models_dir/$model_name\n",
+        "                !cp $stable_diffusion_v2_dir $sd_models_dir/$model_name\n",
         "        # else:\n",
         "        #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
         "        #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
@@ -1060,6 +1060,14 @@
         "\n",
         "!$cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5c3adfcc-26c5-4282-a768-def36fe73587",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
