--- a/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
@@ -923,7 +923,11 @@
         "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
         "\n",
         "# check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt')\n",
-        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',False)"
+        "\n",
+        "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',False) \n",
+        "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
+        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',False)"
       ]
     },
     {
