--- a/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
+++ b/tools/env_setup_tools/fromZeroToSetupSdEnv-for-AutoDL.ipynb
@@ -571,11 +571,14 @@
         "\n",
         "# \u9996\u5148\u5224\u65ad\u672c\u673a\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\u4e86\u53ef\u4ee5\u8fd0\u884c\u7684Xformers\n",
         "\n",
-        "if check_xformers_info(validate_rules):\n",
-        "    print('Xformers\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u53e6\u5916\u5b89\u88c5\u6216\u7f16\u8bd1')\n",
-        "else:\n",
-        "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
-        "    whl_path = find_xformers_whl_and_install('/root')"
+        "# \u5efa\u8bae\u4f7f\u7528SD-WebUI\u81ea\u52a8\u62c9\u53d6\u5e76\u5b89\u88c5\u7684\u9884\u7f16\u8bd1\u7248\u672c\uff0c\u4e0b\u9762\u8fd9\u4e2a\u65b9\u6cd5\u4f1a\u641c\u7d22\u4f60\u7684autodl\u7684fs\u3001tmp\u548cpub\u76d8\u4e2d\u662f\u5426\u6709\u9884\u7f16\u8bd1\u7684xformers.whl\u6587\u4ef6\uff0c\u6709\u7684\u8bdd\u4f1a\u8fdb\u884c\u5b89\u88c5\n",
+        "# \u8fd8\u6709\u7ec8\u6781\u7684\u529e\u6cd5\uff1a\u5c31\u662f\u4f7f\u7528\u6e90\u4ee3\u7801\u5728\u672c\u673a\u7f16\u8bd1\uff0c\u8fd9\u4e2a\u529e\u6cd5\u4e00\u5b9a\u662f\u6700\u53ef\u9760\u7684\uff0c\u7f3a\u70b9\u4e5f\u5f88\u660e\u663e\uff0c\u5c31\u662f\u9700\u8981\u7b49\u5f85\u7f16\u8bd1\u65f6\u95f4\n",
+        "\n",
+        "# if check_xformers_info(validate_rules):\n",
+        "#     print('Xformers\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u53e6\u5916\u5b89\u88c5\u6216\u7f16\u8bd1')\n",
+        "# else:\n",
+        "#     # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
+        "#     whl_path = find_xformers_whl_and_install('/root')"
       ]
     },
     {
@@ -875,13 +878,13 @@
         "    return os.path.exists(file_path) and os.path.getsize(file_path) == size\n",
         "\n",
         "def check_model_and_make_symbollink(model_name,models_dir, use_symlink=True):\n",
-        "    global webUIDir,abs_models_dir\n",
+        "    global webUIDir\n",
         "    try:\n",
-        "        webUIDir,abs_models_dir\n",
+        "        webUIDir\n",
         "    except:\n",
         "        webUIDir = getWebUIDir()\n",
-        "        abs_models_dir = os.path.realpath(os.path.join(webUIDir,models_dir))\n",
         "\n",
+        "    abs_models_dir = os.path.realpath(os.path.join(webUIDir,models_dir))\n",
         "    model_path = os.path.realpath(os.path.join(abs_models_dir,model_name))\n",
         "\n",
         "    for i in [\n",
@@ -927,7 +930,7 @@
         "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
         "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',False) \n",
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
-        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',False)"
+        "# check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',False)"
       ]
     },
     {
@@ -1042,7 +1045,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "5c3adfcc-26c5-4282-a768-def36fe73587",
+      "id": "ff33c261-af66-45de-a15a-f7b2f593ce96",
       "metadata": {},
       "outputs": [],
       "source": []
