--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -944,7 +944,8 @@
         "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
         "\n",
         "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt')\n",
-        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors')"
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors')\n",
+        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors')"
       ]
     },
     {
