add all pre-trained models

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -869,18 +869,9 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import hashlib\n",
         "from func.checksum import generate_checksum,find_folder\n",
         "\n",
-        "# def find_file(root_dir, target_name):\n",
-        "#     paths = []\n",
-        "#     paths = !find $root_dir -name $target_name\n",
-        "#     print(paths)\n",
-        "    \n",
-        "#     paths.sort(key=len)\n",
-        "#     if paths:\n",
-        "#         return paths\n",
-        "#     else:\n",
-        "#         return None\n",
         "def create_symlink(source_path, symlink_path, symlink_name):\n",
         "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
         "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
@@ -912,40 +903,68 @@
         "    else:\n",
         "        return None\n",
         "\n",
-        "def check_model_and_make_symbollink(model_name):\n",
-        "    webUIDir = getWebUIDir()\n",
-        "    sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
-        "    model_path = os.path.realpath(os.path.join(sd_models_dir,model_name))\n",
+        "def check_file(file_path, size):\n",
+        "    return os.path.exists(file_path) and os.path.getsize(file_path) == size\n",
+        "\n",
+        "def check_model_and_make_symbollink(model_name, models_dir, use_symlink=True):\n",
+        "    global webUIDir\n",
+        "    try:\n",
+        "        webUIDir\n",
+        "    except:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "        \n",
+        "    if os.path.isabs(models_dir):  # \u5224\u65admodels_dir\u662f\u5426\u4e3a\u7edd\u5bf9\u8def\u5f84\n",
+        "        abs_models_dir = models_dir\n",
+        "    else:\n",
+        "        abs_models_dir = os.path.realpath(os.path.join(webUIDir, models_dir))\n",
         "    \n",
-        "    file_list = find_file('/', model_name)\n",
+        "    if not os.path.exists(abs_models_dir):\n",
+        "        os.makedirs(abs_models_dir)\n",
+        "        print(f'\u521b\u5efa\u76ee\u5f55 {abs_models_dir}')\n",
+        "\n",
+        "    model_path = os.path.realpath(os.path.join(abs_models_dir, model_name))\n",
+        "\n",
+        "    for i in range(0, 4):  # AutoDL\u4e2d\u8fdb\u884cnas\u3001fs\u3001pub\u7684\u641c\u7d22\n",
+        "        file_list = find_file(f'/input{i}', model_name)\n",
+        "        if file_list:\n",
+        "            break\n",
+        "        else:\n",
+        "            continue\n",
+        "\n",
         "    if file_list:\n",
-        "        stable_diffusion_v2_dir = file_list[0]\n",
+        "        target_model_dist = file_list[0]\n",
         "\n",
-        "        print(stable_diffusion_v2_dir)\n",
+        "        print(target_model_dist)\n",
         "\n",
-        "        if stable_diffusion_v2_dir:\n",
-        "\n",
-        "            if stable_diffusion_v2_dir==model_path:\n",
-        "                print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
-        "            else:\n",
-        "                # !cp $stable_diffusion_v2_dir $sd_models_dir\n",
-        "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
+        "        if os.path.exists(model_path) and check_file(model_path, os.path.getsize(target_model_dist)):\n",
+        "            print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
+        "        else:\n",
+        "            if use_symlink:\n",
+        "                # create symbolic link\n",
         "                create_symlink(\n",
-        "                    source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "                    symlink_path = sd_models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "                    symlink_name = model_name # \u6a21\u578b\u540d\u79f0\n",
+        "                    source_path=target_model_dist,  # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
+        "                    symlink_path=abs_models_dir,  # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
+        "                    symlink_name=model_name  # \u6a21\u578b\u540d\u79f0\n",
         "                )\n",
-        "        # else:\n",
-        "        #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
-        "        #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
-        "        #     %run $convertodiffv2_path\n",
-        "        #     check_model_and_make_symbollink()\n",
+        "                print('\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\u5b8c\u6210\uff01')\n",
+        "            else:\n",
+        "                # copy file\n",
+        "                if not os.path.exists(model_path) or not check_file(model_path, os.path.getsize(target_model_dist)):\n",
+        "                    print('\u6b63\u5728\u8fdb\u884c\u590d\u5236...')\n",
+        "                    !cp $target_model_dist $abs_models_dir/$model_name\n",
+        "                    print('\u590d\u5236\u5b8c\u6210\uff01')\n",
+        "                else:\n",
+        "                    print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u590d\u5236')\n",
         "    else:\n",
         "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
         "\n",
-        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt')\n",
-        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors')\n",
-        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors')"
+        "\n",
+        "# SD 2.1\u6a21\u578b\n",
+        "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt','./models/Stable-diffusion',True)\n",
+        "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
+        "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',True) \n",
+        "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
+        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)"
       ]
     },
     {
@@ -953,8 +972,119 @@
       "id": "19817a09-579d-40e7-80ba-e9421cd1195a",
       "metadata": {},
       "source": [
+        "## \u90e8\u7f72\u5176\u4ed6\u5fc5\u8981\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cd4c6c12-fd87-4d4f-8629-959c3e6f9dba",
+      "metadata": {},
+      "source": [
+        "### \u56fe\u751f\u6587\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "43130db0-8be4-4732-b64b-5d2d512e9bbb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# BLIP\n",
+        "check_model_and_make_symbollink('model_base_caption_capfilt_large.pth','./models/BLIP',True)\n",
+        "check_model_and_make_symbollink('ViT-L-14.pt','/root/.cache/clip',True)\n",
+        "check_model_and_make_symbollink('ViT-B-16.pt','/root/.cache/clip',True)\n",
+        "# Deepbooru\u6a21\u578b\n",
+        "check_model_and_make_symbollink('model-resnet_custom_v3.pt','/models/torch_deepdanbooru',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "43ee5bd0-5e38-4a7c-9b02-1fcb604388ff",
+      "metadata": {},
+      "source": [
+        "### \u4eba\u8138\u4fee\u590d\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "679b7502-5750-4fbb-88c8-90cf2c2575cf",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# GFPGAN\n",
+        "check_model_and_make_symbollink('GFPGANv1.4.pth','./models/GFPGAN',True)\n",
+        "check_model_and_make_symbollink('detection_Resnet50_Final.pth','./models/GFPGAN',True)\n",
+        "check_model_and_make_symbollink('parsing_parsenet.pth','./models/GFPGAN',True)\n",
+        "# Codeformer\n",
+        "check_model_and_make_symbollink('codeformer-v0.1.0.pth','./models/Codeformer',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "79b729c0-679e-476a-bff7-f77049a2ed9c",
+      "metadata": {},
+      "source": [
+        "### Upscale\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a35e8308-918a-4881-aeaf-b2bfa7cadc09",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "check_model_and_make_symbollink('SwinIR_4x.pth','./models/SwinIR',True)\n",
+        "check_model_and_make_symbollink('RealESRGAN_x4plus.pth','./models/RealESRGAN',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9c5bbe16-edf8-43ee-aa43-ecac2c6f2829",
+      "metadata": {},
+      "source": [
         "## \u90e8\u7f72ControlNet\u6a21\u578b\n",
         "\u89e3\u538bControlNet\u6a21\u578b\u5e76\u5728controlnet\u62d3\u5c55\u7684\u6a21\u578b\u76ee\u5f55\u4e0b\u521b\u5efa\u5bf9\u5e94\u6a21\u578b\u7684\u7b26\u53f7\u94fe\u63a5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "64fef694-4705-4219-9ecd-8631a1c51149",
+      "metadata": {},
+      "source": [
+        "### ControlNet\u7684preprocessors\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d02fe9c2-f1f9-4099-9986-715511a4d25e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# midas\u6a21\u578b\n",
+        "check_model_and_make_symbollink('dpt_hybrid-midas-501f0c75.pt','./extensions/sd-webui-controlnet/annotator/midas',True)\n",
+        "# res101.pth\u6a21\u578b\n",
+        "check_model_and_make_symbollink('res101.pth','./extensions/sd-webui-controlnet/annotator/leres',True)\n",
+        "# hed\u6a21\u578b\n",
+        "check_model_and_make_symbollink('network-bsds500.pth','./extensions/sd-webui-controlnet/annotator/hed',True)\n",
+        "# mlsd\u6a21\u578b\n",
+        "check_model_and_make_symbollink('mlsd_large_512_fp32.pth','./extensions/sd-webui-controlnet/annotator/mlsd',True)\n",
+        "# hand_pose_model\u548cbody_pose_model\u6a21\u578b\n",
+        "check_model_and_make_symbollink('body_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',True)\n",
+        "check_model_and_make_symbollink('hand_pose_model.pth','./extensions/sd-webui-controlnet/annotator/openpose',True)\n",
+        "# Segmentation\u7684preprocessor\u6a21\u578b\n",
+        "check_model_and_make_symbollink('upernet_global_small.pth','./extensions/sd-webui-controlnet/annotator/uniformer',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c1ce97eb-175c-4355-9963-ecb727457470",
+      "metadata": {},
+      "source": [
+        "### ControlNet\u7684\u6a21\u578b"
       ]
     },
     {
@@ -964,56 +1094,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def check_ContorlNet_model_and_make_symbollink(model_name):\n",
-        "    global webUIDir,models_dir\n",
-        "    try:\n",
-        "        webUIDir,models_dir\n",
-        "    except:\n",
-        "        webUIDir = getWebUIDir()\n",
-        "        models_dir = os.path.realpath(os.path.join(webUIDir,'./extensions/sd-webui-controlnet/models'))\n",
-        "        \n",
-        "    model_path = os.path.realpath(os.path.join(models_dir,model_name))\n",
-        "    \n",
-        "    for i in range(0,4):\n",
-        "        file_list = find_file(f'/input{i}', model_name)\n",
-        "        if file_list:\n",
-        "            break\n",
-        "        else:\n",
-        "            continue\n",
-        "\n",
-        "    if file_list:\n",
-        "        stable_diffusion_v2_dir = file_list[0]\n",
-        "\n",
-        "        print(stable_diffusion_v2_dir)\n",
-        "\n",
-        "        if stable_diffusion_v2_dir:\n",
-        "\n",
-        "            if stable_diffusion_v2_dir==model_path:\n",
-        "                print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
-        "            else:\n",
-        "                # !cp $stable_diffusion_v2_dir $models_dir\n",
-        "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
-        "                create_symlink(\n",
-        "                    source_path = stable_diffusion_v2_dir, # openbayes \u7279\u6709\u7684\u76ee\u5f55\uff0c\u662f\u5916\u90e8\u6570\u636e\u96c6\u6302\u8f7d\u5230\u5f53\u524d\u955c\u50cf\u7684\u76ee\u5f55\uff0c\u7f16\u53f7\u4ece0~4\n",
-        "                    symlink_path = models_dir, # fast-dreambooth.ipynb\u7684 model download cell\u4e00\u822c\u4e0b\u8f7d\u6a21\u578b\u7684\u8def\u5f84\n",
-        "                    symlink_name = model_name # \u6a21\u578b\u540d\u79f0\n",
-        "                )\n",
-        "        # else:\n",
-        "        #     print('\u627e\u4e0d\u5230stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\uff0c\u5c1d\u8bd5\u901a\u8fc7\u8fd0\u884cconvertodiffv2.ipynb\u6765\u83b7\u53d6\u6a21\u578b')\n",
-        "        #     convertodiffv2_path = os.path.join(repo_root_dir,'./tools/model_convert_tools/convertodiffv2.ipynb')\n",
-        "        #     %run $convertodiffv2_path\n",
-        "        #     check_model_and_make_symbollink()\n",
-        "    else:\n",
-        "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
-        "        \n",
-        "check_ContorlNet_model_and_make_symbollink('control_canny-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_depth-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_hed-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_mlsd-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_normal-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_openpose-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_scribble-fp16.safetensors')\n",
-        "check_ContorlNet_model_and_make_symbollink('control_seg-fp16.safetensors')"
+        "check_model_and_make_symbollink('control_canny-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_depth-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_hed-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_mlsd-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_normal-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_openpose-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_scribble-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)\n",
+        "check_model_and_make_symbollink('control_seg-fp16.safetensors','./extensions/sd-webui-controlnet/models',True)"
       ]
     },
     {
